--- a/src/component/projects.css
+++ b/src/component/projects.css
@@ -22,7 +22,7 @@
     justify-content: center;
     align-items: flex-start;
     width :450px;
-    height: 280px;
+    height: 450px;
     background: #fff;
     border-radius: 20px;
     box-shadow:  0 35px 80px rgba(0,0,0,0.15);
@@ -63,7 +63,7 @@
 .container .project-card .content{
     position:absolute;
     top:210px;
-    height: 50px;
+    height: 200px;
     overflow: hidden;
     padding: 0 50px;
     transition: 0.5s;
@@ -74,3 +74,9 @@
     height:300px;
 
 }
+
+
+
+@media screen and (max-width: 480px) {
+    
+  }
