--- a/src/component/navbar.css
+++ b/src/component/navbar.css
@@ -1,4 +1,4 @@
-.flexbx{
+/* .flexbx{
     justify-content: right;
 
 }
@@ -12,7 +12,7 @@
         
     }
     .bxn{
-        /* height: 200px; */
+        
         margin-bottom: -50px;
         
 
@@ -23,23 +23,7 @@
        flex-direction: column;
        gap: -5px;
     }
-/* 
-    #nav-menu{
-        position: relative;
-
-      }
-    .nav-menu1 {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        height: 90vh;
-        position: absolute;
-        top: 70px;
-        left: -100%;
-        opacity: 1;
-        transition: all 0.5s ease;
-      } */
 
 
 
-}
+} */
