--- a/src/component/projects.css
+++ b/src/component/projects.css
@@ -14,6 +14,7 @@
     flex-wrap: wrap;
     gap: 100px 50px;
     padding: 90px 30px;
+    z-index: 1;
 }
 
 .container .project-card{
@@ -21,8 +22,8 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    width :450px;
-    height: 450px;
+    width :400px;
+    height: 540px;
     background: #fff;
     border-radius: 20px;
     box-shadow:  0 35px 80px rgba(0,0,0,0.15);
@@ -30,7 +31,7 @@
 }
 
 .container .project-card:hover{
-    height:400px;
+    height:450px;
 }
 
 .container .project-card .imgBx{
@@ -63,7 +64,7 @@
 .container .project-card .content{
     position:absolute;
     top:210px;
-    height: 200px;
+    height: 350px;
     overflow: hidden;
     padding: 0 50px;
     transition: 0.5s;
@@ -71,12 +72,16 @@
 
 .container .project-card:hover .content{
     top:80px;
-    height:300px;
+    height:350px;
 
 }
 
 
 
 @media screen and (max-width: 480px) {
+    .container {
+        margin-top: -150px;
+       scale: 0.8;
+    }
     
   }
