--- a/src/component/skills.css
+++ b/src/component/skills.css
@@ -2,7 +2,10 @@
     
     padding:15px;
      gap:5px;
-     width:70%
+     width:70%;
+     display: flex;
+     justify-content: "space-around"  ;
+   flex-wrap: wrap;
 
 }
 .skills-card{
@@ -11,15 +14,44 @@
 }
 
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 400px) {
     .skills-card{
-        scale: 0.7;
-        gap:-10px;
+        scale: 0.8;
+        /* gap:-10px; */
+        margin-left: -20px;
     }
    
     .skills-card{
         margin-bottom: -20px
     
+    }
+    .flexBox1{
+    
+        margin-left:-120px;
+        display: grid;
+       
+    
+        grid-template-columns: repeat(2, 1fr);
+    gap:"1px"
+    }
+    
+  }
+  @media screen and (max-width: 825px) {
+    .skills-card{
+        scale: 0.9;
+        /* gap:-10px; */
+        margin-left: -20px;
+    }
+   
+   
+    .flexBox1{
+    
+        margin-left:-120px;
+        display: grid;
+       
+    
+        grid-template-columns: repeat(3, 1fr);
+    gap:"1px"
     }
     
   }
