--- a/src/component/skills.css
+++ b/src/component/skills.css
@@ -36,9 +36,9 @@
     }
     
   }
-  @media screen and (max-width: 825px) and (min-width: 401)  {
+  @media screen and (max-width: 830px) and (min-width: 401px)  {
     .skills-card{
-        scale: 0.9;
+        scale: 0.85;
         /* gap:-10px; */
         margin-left: -20px;
     }
